# dict_rx

src/: CMakeLists.txt  dict_rx.c  dict_rx.h
